--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -4,6 +4,7 @@
   </div>
 
   <div class="col-md-9">
+    <h1>Coucou</h1>
     <h1 class="display-4"><span jhiTranslate="home.title">Bienvenue, Java Hipster !</span> (Forum)</h1>
 
     <p class="lead" jhiTranslate="home.subtitle">Ceci est votre page d'accueil</p>
