Customisation Front-end

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -18,6 +18,7 @@ h4 {
 a:hover {
   /* make sure browsers use the pointer cursor for anchors, even with no href */
   cursor: pointer;
+  color: red;
 }
 
 .dropdown-item:hover {
