--- a/src/main/webapp/app/entities/message/list/message.component.html
+++ b/src/main/webapp/app/entities/message/list/message.component.html
@@ -32,12 +32,6 @@
     <table class="table table-striped" aria-describedby="page-heading">
       <thead>
         <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" (sortChange)="navigateToWithComponentValues()">
-          <th scope="col" jhiSortBy="id">
-            <div class="d-flex">
-              <span jhiTranslate="global.field.id">ID</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
           <th scope="col" jhiSortBy="subject">
             <div class="d-flex">
               <span jhiTranslate="forumApp.message.subject">Subject</span>
@@ -85,9 +79,8 @@
       >
         <tr *ngFor="let message of messages; trackBy: trackId" data-cy="entityTable">
           <td>
-            <a [routerLink]="['/message', message.id, 'view']">{{ message.id }}</a>
+            <a [routerLink]="['/message', message.id, 'view']">{{ message.subject }}</a>
           </td>
-          <td>{{ message.subject }}</td>
           <td>{{ message.content }}</td>
           <td>{{ message.postDate | formatMediumDate }}</td>
           <td>
