--- a/src/main/webapp/app/entities/topic/list/topic.component.html
+++ b/src/main/webapp/app/entities/topic/list/topic.component.html
@@ -32,12 +32,6 @@
     <table class="table table-striped" aria-describedby="page-heading">
       <thead>
         <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" (sortChange)="navigateToWithComponentValues()">
-          <th scope="col" jhiSortBy="id">
-            <div class="d-flex">
-              <span jhiTranslate="global.field.id">ID</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
           <th scope="col" jhiSortBy="titre">
             <div class="d-flex">
               <span jhiTranslate="forumApp.topic.titre">Titre</span>
@@ -56,9 +50,8 @@
       <tbody>
         <tr *ngFor="let topic of topics; trackBy: trackId" data-cy="entityTable">
           <td>
-            <a [routerLink]="['/topic', topic.id, 'view']">{{ topic.id }}</a>
+            <a [routerLink]="['/topic', topic.id, 'view']">{{ topic.titre }}</a>
           </td>
-          <td>{{ topic.titre }}</td>
           <td>{{ topic.description }}</td>
           <td class="text-end">
             <div class="btn-group">
