--- a/src/main/webapp/app/entities/message/update/message-update.component.html
+++ b/src/main/webapp/app/entities/message/update/message-update.component.html
@@ -45,7 +45,7 @@
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="forumApp.message.content" for="field_content">Content</label>
-          <input type="text" class="form-control" name="content" id="field_content" data-cy="content" formControlName="content" />
+          <textarea class="form-control" name="content" id="field_content" data-cy="content" formControlName="content"></textarea>
         </div>
 
         <div class="row mb-3">
