--- a/src/main/webapp/app/entities/topic/update/topic-update.component.html
+++ b/src/main/webapp/app/entities/topic/update/topic-update.component.html
@@ -41,14 +41,13 @@
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="forumApp.topic.description" for="field_description">Description</label>
-          <input
-            type="text"
+          <textarea
             class="form-control"
             name="description"
             id="field_description"
             data-cy="description"
             formControlName="description"
-          />
+          ></textarea>
         </div>
       </div>
 
